(Chapter 4) Added static image file and added template tags to index template to show it on index view.

--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% load staticfiles %}
+
 <html>
 	
 	<head>
@@ -10,6 +12,11 @@
 		<div>
 			hey there partner! <br />
 			<strong>{{ boldmessage }}</strong><br />
+		</div>
+		
+		<div>
+			<a href="/rango/about/">About</a><br />
+			<img src="{% static 'images/rango_profile.jpg' %}" alt="Picture of Rango" />
 		</div>
 	</body>
 	
