(Chapter 4) Renamed image to pass the chapter test.

--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -16,7 +16,7 @@
 		
 		<div>
 			<a href="/rango/about/">About</a><br />
-			<img src="{% static 'images/rango_profile.jpg' %}" alt="Picture of Rango" />
+			<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
 		</div>
 	</body>
 	
