--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -17,7 +17,7 @@
 		<div>
 			<a href='/rango/'>Index</a><br />
 			<img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
-			<img src="{% static 'images/rango_profile.jpg' %}" alt="Picture of Rango" />
+			<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
 		</div>
 	</body>
 	
