--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,24 +1,19 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
-	
-	<head>
-		<title>Rango: About</title>
-	</head>
-	
-	<body>
+{% block title_block %}
+    About Rango
+{% endblock %}
+
+{% block body_block %}
 		<h1>Rango says...</h1>
 		<div>
 			here is the about page. <br />
 			<strong>This tutorial has been put together by Adrian Durci.</strong><br />
 		</div>
-		
+
 		<div>
-			<a href='/rango/'>Index</a><br />
 			<img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
 			<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
 		</div>
-	</body>
-	
-</html>
+{% endblock %}
