--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
-	
-	<head>
-		<title>Rango</title>
-	</head>
-	
-	<body>
+{% block title_block %}
+    Homepage
+{% endblock %}
+
+{% block body_block %}
 		<h1>Rango says...</h1>
 		<div>
 			hey there partner! <br />
@@ -19,7 +17,7 @@
 		{% if categories %}
 			<ul>
 			{% for category in categories %}
-				<li><a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a></li>
+				<li><a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a></li>
 			{% endfor %}
 			</ul>
 		{% else %}
@@ -41,10 +39,6 @@
 		</div>
 
 		<div>
-			<a href="/rango/about/">About Rango</a><br />
-			<a href="/rango/add_category/">Add a New Category</a><br />
 			<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
 		</div>
-	</body>
-	
-</html>
+{% endblock %}
