--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -11,7 +11,9 @@
 			here is the about page. <br />
 			<strong>This tutorial has been put together by Adrian Durci.</strong><br />
 		</div>
-
+		<p>
+			Visits: {{ visits }}
+		</p>
 		<div>
 			<img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
 			<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
